# Node_Client

./: CMakeLists.txt  README.md
Node_Client/: CMakeLists.txt  Node_Client.cpp  Node_Client.h
Node_Client/Connections/: IServerConnection.h  MyServerConnection.h
Node_Client/Handlers/: INodeDataHandler.h  MyNodeDataHandler.cpp  MyNodeDataHandler.h  MyServerConnection.cpp
Node_Client/Includes/: MyNodeDataHandler.h  MyServerConnection.h  NodeDataHandler.h  ServerConnection.h
Node_Client/Models/: NodeReading.cpp  NodeReading.h
